# bo_nalog_client

./: README.md  Test.ipynb  example.py  pyproject.toml  readme.md  requirements.txt  setup.py
bo_nalog_client/: __init__.py  client.py
bo_nalog_client/decoders/: financial_results.py
