[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bo-nalog-client"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Timur", email = "me@example.com"},
]
dependencies = [
    "httpx",
    "pydantic",
]
